# keywich

./: 404.html  CHANGELOG  CNAME  LICENSE  README.md  backup.html  changelog.html  charsets.html  cli.html  how_to_use.html  installation.html  introduction.html  key_parameters.html  managing_keys.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  print.html  searchindex.js  searchindex.json  settings.html  setup_profile.html  shortcuts.html
apps/desktop/: Cargo.toml  package.json  tauri.conf.json
apps/desktop/locales/: en.json  tr.json
apps/desktop/src/: commands.rs  errors.rs  icon_scheme.rs  main.rs
apps/desktop/src/commands/: charsets.rs  keys.rs  password.rs  profile.rs  utilities.rs
apps/keywitch-desktop/: package.json  tauri.conf.json
apps/keywitch_desktop/: Cargo.toml  package.json  tauri.conf.json
apps/keywitch_desktop/src/: main.rs
aur/: PKGBUILD
changelog/: v0_2_0.html  v0_3_0.html
changelogs/: v0_2_0.html
docs/: book.toml
docs/src/: SUMMARY.md  backup.md  changelog.md  charsets.md  cli.md  how_to_use.md  installation.md  introduction.md  key_parameters.md  managing_keys.md  settings.md  setup_profile.md  shortcuts.md
docs/src/changelog/: v0_2_0.md  v0_3_0.md
docs/src/changelogs/: v0_2_0.md
gui/: package.json  svelte.config.js  tailwind.config.js  vite.config.ts
gui/src/: app.css  app.html  app.postcss  hooks.client.ts  hooks.ts
gui/src/lib/: api.ts  app.ts  app_actions.ts  app_event_bus.ts  components.ts  event_bus.ts  event_manager.ts  index.ts  logger.ts  rpc.ts  stores.ts  utils.ts
gui/src/lib/api/: types.ts
gui/src/lib/components/: advanced_copy_menu.svelte  key_filter.svelte  key_icon.svelte  key_row_item.svelte  log_panel.svelte  pin_item.svelte
gui/src/lib/icons/: activity.svelte  alert-triangle.svelte  archive.svelte  bell.svelte  bookmark.svelte  chevrons-left.svelte  chevrons-right.svelte  clipboard.svelte  code.svelte  download.svelte  edit.svelte  eye-off.svelte  eye.svelte  filter.svelte  home.svelte  info.svelte  key.svelte  keywich.svelte  layers.svelte  link.svelte  lock.svelte  menu.svelte  moon.svelte  plus-circle.svelte  plus.svelte  qr.svelte  refresh-cw.svelte  search.svelte  settings.svelte  star.svelte  sun.svelte  tag.svelte  terminal.svelte  tool.svelte  trash-2.svelte  type.svelte  unlock.svelte  upload.svelte  user.svelte  x.svelte  (+1 more)
gui/src/lib/logger/: global_logger.ts  log_emitter.ts  types.ts
gui/src/lib/rpc/: rpc.ts  schemas.ts  tauri_rpc.ts  test_rpc.ts  types.ts
gui/src/lib/stores/: config_store.ts  extended_toast_store.ts  filter_history.ts  i18n_store.ts  light_switch.ts  log_panel_store.ts  pass_store.ts  theme_store.ts
gui/src/lib/utils/: content_resolver.ts  create_debouncer.ts  extended_toast_store.ts  is_null_or_empty.ts  key_filter_tokenizer.ts  or_default.ts  string_format.ts  to_promise.ts
gui/src/locales/: en.json  tr.json
gui/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  menu.config.ts
gui/src/routes/(app)/: +layout.svelte  +page.svelte  +page.ts
gui/src/routes/keys/: +page.svelte  +page.ts  advanced_copy.svelte  create_key_form.svelte  types.ts
gui/src/routes/settings/: +page.svelte  +page.ts  settings_appearance.svelte  settings_charsets.svelte
gui/src/routes/unlock/: +page.svelte  +page.ts
gui/themes/: keywich_theme.ts
keywitch-gui/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs
keywitch-gui/src/: app.css
keywitch-gui/src-tauri/: tauri.conf.json
keywitch-gui/src-tauri/src/: main.rs
keywitch-gui/src/lib/: theme.store.ts
keywitch-gui/src/lib/icons/: index.ts
keywitch-gui/src/routes/: +layout.svelte  +page.svelte
keywitch-gui/src/routes/settings/: +page.svelte
lib/: Cargo.toml  dev.sqlite
lib/src/: charset.rs  errors.rs  hash.rs  lib.rs  profile.rs
lib/src/charset/: parser.rs
lib/src/migrations/: 01_initial.sql
lib/src/profile/: backup.rs  keys.rs  utils.rs
lib/src/profile/backup/: file_backup.rs  reader.rs  writer.rs
lib/src/profile/utils/: tag_list.rs  timestamp.rs
lib/tests/: profile_keys.rs  taglist.rs
libs/keywich_api/: package.json  tsconfig.json
libs/keywich_api/src/: configs.d.ts  index.d.ts  keys.d.ts  password.d.ts  types.d.ts  utilities.d.ts
libs/keywich_api/src/api/: account.d.ts  charsets.d.ts  configs.d.ts  keys.d.ts  password.d.ts  types.d.ts  utilities.d.ts
libs/keywich_api/src/utils/: index.js  (+1 more)
libs/keywich_lib/: .env  Cargo.toml  dev.sqlite
libs/keywich_lib/src/: charset.rs  errors.rs  lib.rs  profile.rs
libs/keywich_lib/src/hash/: scrypt.rs
libs/keywich_lib/src/migrations/: 01_initial.sql
libs/keywich_lib/src/profile/: charsets.rs  keys.rs
libs/keywich_lib/src/profile/utils/: tag_list.rs  timestamp.rs
libs/keywich_lib/tests/: charsets.rs  hash_test.rs  profile_charsets.rs  profile_keys.rs  taglist.rs
libs/keywich_rpc/: package.json
libs/keywitch_lib/: Cargo.toml  dev.sqlite
libs/keywitch_lib/src/: charset.rs  errors.rs  hash.rs  lib.rs  profile.rs
libs/keywitch_lib/src/charset/: parser.rs
libs/keywitch_lib/src/hash/: scrypt.rs
libs/keywitch_lib/src/migrations/: 01_initial.sql
libs/keywitch_lib/src/profile/: charsets.rs  keys.rs  models.rs  tag_list.rs  utils.rs
libs/keywitch_lib/src/profile/utils/: tag_list.rs
libs/keywitch_lib/tests/: test.rs
libs/keywitch_rpc/: package.json
libs/keywitch_rpc/src/: index.d.ts
libs/memory_api/: package.json
libs/memory_api/src/: charset.js  index.js  key_metadata.js  utility.js
libs/memory_rpc/: package.json  tsconfig.json
libs/memory_rpc/src/: charset.js  index.d.ts  index.js  key_metadata.js  utility.js
libs/tauri_api/: package.json  tsconfig.json
libs/tauri_api/src/: contents.js  event_bus.d.ts  event_bus.js  index.d.ts  index.js
libs/tauri_rpc/: package.json
tauri_app/: Cargo.toml  package.json  tauri.conf.json
tauri_app/locales/: en.json  jp.json  tr.json
tauri_app/src/: commands.rs  custom_protocols.rs  errors.rs  icon_scheme.rs  log_event_appender.rs  main.rs  result_log.rs
tauri_app/src/commands/: backup.rs  charsets.rs  keys.rs  login.rs  password.rs  utilities.rs
(+33 files in other folders)
