[package]
name = "keywich_lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["qr", "json", "base64"]
qr = ["dep:qrcode"]
json = ["dep:serde", "dep:serde_json"]
base64 = ["dep:base64"]
profile = ["dep:sqlx", "dep:libsqlite3-sys", "dep:serde", "dep:serde_json", "dep:zip", "dep:sha2", "dep:hmac" ]

[dependencies]
base64 = { version = "0.22.0", optional = true }
log = "0.4.21"
scrypt = { version = "0.11.0", default-features = false }
serde = { version = "1.0.195", features = ["serde_derive"], optional = true }
serde_json = { version = "1.0.115", optional = true }
sqlx = { version = "0.7.4", features = ["sqlite", "migrate", "macros", "json", "sqlx-macros", "runtime-tokio"], optional = true }
libsqlite3-sys = { version = "=0.27", features = ["bundled", "bundled-sqlcipher"], optional = true }
qrcode = { version = "0.13.0", optional = true }
bytes = { version = "1.6.0" }
validator = { version = "=0.16.1", features = ["derive"] }
zip = { version = "0.6.6", features = ["deflate"], default-features = false, optional = true }
hmac = { version = "0.12.1", optional = true, features = ["reset"]}
sha2 = { version = "0.10.8", optional = true }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt", "test-util"] }

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
