[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Timur Olur"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
opt-level = 3

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = ["fs-remove-file", "protocol-asset", "clipboard-write-text", "fs-write-file", "dialog-save", "dialog-open", "fs-exists", "fs-read-file", "devtools"] }
keywich_lib = { version = "0.1.0", path = "../libs/keywich_lib", features = ["profile"] }
clap = { version = "4.3.23", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v7"] }
image = { version = "0.24.8", features = ["jpeg", "png", "webp", "rgb"], default-features = false }
percent-encoding = "2.3.1"
const_format = "0.2.32"
keyring = { features = ["platform-freebsd", "platform-linux", "platform-windows", "platform-macos", "platform-openbsd"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
